--- a/rules.css
+++ b/rules.css
@@ -1,37 +1,38 @@
+/*Белый фон для размера меньше 320px */
 @media (max-width: 319px) {
     body {
         display: none;
     }
 }
 
+
+/* Правила для 320px */
 @media (min-width: 320px) {
     body {
         padding: 0;
         margin: 0;
-        display: flex;
-        flex-direction: column;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
     }
     
-    header {
-        display: flex;
+    
+
+    .header__structure {
         width: 100%;
         height: 87px;
+        padding: 0;
+        margin: 0;
+
         background: #FFFFFF;
         border-bottom: 1px solid #D9FFF5;
-        align-items: center ;
-    }
 
-    .header_line {
+        list-style-type: none;
         display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: fit-content;
+        align-items: center ;
         justify-content: space-between;
+        flex-direction: row;
+
     }
     
-    .header__button_Burgericon {
+    .header__button_BurgerIcon {
         width: 40px;
         height: 40px;
         margin-left: 16px;
@@ -45,11 +46,11 @@
     }
     
     .header__dividerIcon1 {
-        display: none;  
+        display: none;   
+    
     }
-
+    
     .header__dividerIcon2 {
-        display: none;
         width: 2px;
         height: 32px;
         margin-left: auto;    
@@ -69,12 +70,17 @@
         margin-left: 16px;
     }
     
-    main.main {
-        background-color: #F8F8F8;
+
+
+    /* main block */
+    .main {
         display: flex;
         flex-direction: column;
+
         margin: 0;
         padding: 0;
+        background-color: #F8F8F8;
+
         font-family: 'TT Lakes',sans-serif;
         font-size: 16px;
         line-height: 24px;
@@ -92,7 +98,6 @@
     .main__pageTitle_hilight {
         width: 4px;
         height: 40px;
-        top: 112px;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         background-color: #41F6D7;
@@ -101,32 +106,35 @@
     .main__pageTitle_text {
         margin: 0;
         margin-left: 12px;
+
+        letter-spacing: -0.6px;
+        font-size: 24px;
+        line-height: 40px;
     }
 
-    .sideBar {
+
+    .main__asideBox {
+        display: flex;
+
         position: relative;
-        display:flex;
-        height: 40px;
+        margin: 0;
         margin-top: 24px;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-}
+        padding: 0;
 
-    .sideMenu {
-        position: relative;
-        display:flex;
         height: 40px;
-        flex-direction: row;
-        flex-wrap: nowrap;
+    }
+
+    .main__sideMenu {           /* Убираю бар */
         overflow-x: auto;
         -ms-overflow-style: none;
         scrollbar-width: none;
     }
 
-    .sideMenu__button {
+    .sideMenu::-webkit-scrollbar {
+        display: none;
+    }
+
+    .main__sideMenu_button {
         flex: 0 0 auto;
         width: 246px;
         border-color: #F8F8F8;
@@ -135,26 +143,26 @@
         border-radius: 6px;
         background-color: #F8F8F8;
 
-        padding-left: auto 16px;
         font-size: 16px;
         font-family: 'TT Lakes',sans-serif;
         letter-spacing: -0.2px;
         color: #7E7E82;
     }
-    .sideMenu__button:first-child {
+    .main__sideMenu_button:first-child {
         margin-left: 16px;
     }
 
-    .sideMenu__button:focus {
-        border-style: solid;
-        border-width: 2px;
+    .main__sideMenu_button:focus {
         background-color: #FFFFFF;
         border-color: #B8FFEC;
-        border-radius: 6px;
     }
 
-    .sideMenu::-webkit-scrollbar {
-        display: none;
+    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
+        position: absolute;
+        left: 0;
+        width: 8px;
+        height: 40px;
+        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
     .sideMenu__rightEage_fade {
@@ -165,29 +173,33 @@
         background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
-    .sideMenu__leftEage_fade {
-        position: absolute;
-        left: 0;
-        width: 8px;
-        height: 40px;
-        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    .main__blockAbout {
+        height: 88px;
+        margin: 24px 16px;
     }
 
-    .firstBlock__about {
-        left: 0;
+    .main__blockAbout_text {
+        margin: 0;
+        padding: 0;
+
         font-weight: 300;
         letter-spacing: 0.2px;
-        margin-left: 16px;
-        margin-right: 16px;
         font-size: 14px;
         line-height: 18px;
-        height: 88px;
         text-align: left;
     }
+
+    /*.main__readMore {     не работает почему?
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 16px;
+        margin-bottom: 16px;
+        width: 132px;
+        height: 24px;
+    }*/
     
     .main__readMore_text {
-        font-family: 'TT Lakes',sans-serif;
-        color: #1B1C21;
         letter-spacing: -0.2px;
     }
 
@@ -195,43 +207,27 @@
 
 
 
-
-
-
-
-
-
-
-
-/* for width 768px*/
+/* Правила для 768px */
 @media (min-width: 768px) {
     body {
         padding: 0;
         margin: 0;
-        display: flex;
-        flex-direction: column;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
     }
     
-    header {
-        display: flex;
+    .header {
         width: 100%;
         height: 87px;
+
         background: #FFFFFF;
         border-bottom: 1px solid #D9FFF5;
-        align-items: center ;
-    }
 
-    .header_line {
         display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: fit-content;
+        align-items: center ;
         justify-content: space-between;
+        flex-direction: row;
     }
     
-    .header__button_Burgericon {
+    .header__button_BurgerIcon {
         width: 40px;
         height: 40px;
         margin-left: 16px;
@@ -244,7 +240,8 @@
         margin-right: auto;
     }
     
-    .header__dividerIon {
+
+    .header__dividerIcon {
         width: 2px;
         height: 32px;
         margin-left: auto;    
@@ -264,12 +261,17 @@
         margin-left: 16px;
     }
     
-    main.main {
-        background-color: #F8F8F8;
+
+
+    /* main block */
+    .main {
         display: flex;
         flex-direction: column;
+
         margin: 0;
         padding: 0;
+        background-color: #F8F8F8;
+
         font-family: 'TT Lakes',sans-serif;
         font-size: 16px;
         line-height: 24px;
@@ -287,7 +289,6 @@
     .main__pageTitle_hilight {
         width: 4px;
         height: 40px;
-        top: 112px;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         background-color: #41F6D7;
@@ -296,31 +297,35 @@
     .main__pageTitle_text {
         margin: 0;
         margin-left: 12px;
+
+        letter-spacing: -0.6px;
+        font-size: 24px;
+        line-height: 40px;
     }
 
-    .sideBar {
+
+    .main__asideBox {
+        display: flex;
+
         position: relative;
-        display:flex;
+        margin: 0;
+        margin-top: 24px;
+        padding: 0;
+
         height: 40px;
-        flex-direction: row;
-        flex-wrap: nowrap;
+    }
+
+    .main__sideMenu {           /* Убираю бар */
         overflow-x: auto;
         -ms-overflow-style: none;
         scrollbar-width: none;
-}
-
-    .sideMenu {
-        position: relative;
-        display:flex;
-        height: 40px;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
     }
 
-    .sideMenu__button {
+    .sideMenu::-webkit-scrollbar {
+        display: none;
+    }
+
+    .main__sideMenu_button {
         flex: 0 0 auto;
         width: 246px;
         border-color: #F8F8F8;
@@ -329,25 +334,26 @@
         border-radius: 6px;
         background-color: #F8F8F8;
 
-        padding-left: auto 16px;
         font-size: 16px;
         font-family: 'TT Lakes',sans-serif;
         letter-spacing: -0.2px;
         color: #7E7E82;
     }
-    .sideMenu__button:first-child {
+    .main__sideMenu_button:first-child {
         margin-left: 16px;
     }
 
-    .sideMenu__button:focus {
-        border-style: solid;
-        border-width: 2px;
+    .main__sideMenu_button:focus {
+        background-color: #FFFFFF;
         border-color: #B8FFEC;
-        border-radius: 6px;
     }
 
-    .sideMenu::-webkit-scrollbar {
-        display: none;
+    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
+        position: absolute;
+        left: 0;
+        width: 8px;
+        height: 40px;
+        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
     .sideMenu__rightEage_fade {
@@ -358,33 +364,41 @@
         background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
-    .sideMenu__leftEage_fade {
-        position: absolute;
-        left: 0;
-        width: 8px;
-        height: 40px;
-        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    .main__blockAbout {
+        height: 88px;
+        margin: 24px 16px;
     }
 
-    .firstBlock__about {
-        left: 0;
+    .main__blockAbout_text {
+        margin: 0;
+        padding: 0;
+
         font-weight: 300;
         letter-spacing: 0.2px;
-        margin-left: 16px;
-        margin-right: 16px;
         font-size: 14px;
         line-height: 18px;
-        height: 88px;
         text-align: left;
     }
+
+    /*.main__readMore {     не работает почему?
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 16px;
+        margin-bottom: 16px;
+        width: 132px;
+        height: 24px;
+    }*/
     
     .main__readMore_text {
-        font-family: 'TT Lakes',sans-serif;
-        color: #1B1C21;
         letter-spacing: -0.2px;
     }
 
 }
+
+
+
+
 
 
 
