--- a/rules.css
+++ b/rules.css
@@ -105,8 +105,7 @@
         display: flex;
 
         position: relative;
-        margin: 0;
-        margin-top: 24px;
+        margin: 24px 0;
         padding: 0;
 
         height: 40px;
@@ -161,15 +160,17 @@
         background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
-    .main__blockAbout {
-        height: 88px;
-        margin: 24px 16px;
-    }
+    .main__block_text {
+        width: 288px;
+        height: 90px;
 
-    .main__blockAbout_text {
-        margin: 0;
+        margin-top: 0;
+        margin-left: 16px;
+        margin-right: 16px;
+        margin-bottom: 16px;
         padding: 0;
 
+        overflow: hidden;
         font-weight: 300;
         letter-spacing: 0.2px;
         font-size: 14px;
@@ -386,25 +387,13 @@
         width: 312px;
         height: 160px;
 
+        overflow: hidden;
         font-weight: 300;
         letter-spacing: 0.2px;
         font-size: 14px;
         line-height: 18px;
         text-align: left;
-    }
-
-    .main__block_text::after {
-        margin-top: 20px;
-        content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера";
-
-        font-weight: 300;
-        letter-spacing: 0.2px;
-        font-size: 14px;
-        line-height: 18px;
-        text-align: left;
-        align-self: flex-end;
-    }
-    
+    }    
 
     /*.main__readMore {     не работает почему?
         display: flex;
