--- a/rules.css
+++ b/rules.css
@@ -207,8 +207,254 @@
 
 
 
+
+
+/************************************************/
+
 /* Правила для 768px */
 @media (min-width: 768px) {
+    body {
+        padding: 0;
+        margin: 0;
+
+    }
+
+
+
+    .menu {
+        width: 100%;
+        height: 87px;
+        padding: 0;
+        margin: 0;
+
+        background: #FFFFFF;
+        border-bottom: 1px solid #D9FFF5;
+
+        list-style-type: none;
+        display: flex;
+        align-items: center ;
+        justify-content: space-between;
+        flex-direction: row;
+
+    }
+
+    #xs-menu-element-none {
+        display: flex;
+    }
+    
+    .menu__button {
+        width: 40px;
+        height: 40px;
+        margin-left: 16px;
+    }
+
+    .menu__button:first-child {
+        margin-left: 24px;
+        margin-right: 0;
+    }
+
+    .menu__button:nth-last-child(2) {
+        margin-left: 0;
+    }
+
+    .menu__button:last-child {
+        margin-right: 24px;
+    }
+    
+    .menu__link {
+        width: 96px;
+        height: 50px;
+        margin-left: 0;    
+        margin-right: auto;
+    }
+    
+    .menu__divider {
+        width: 2px;
+        height: 32px;
+        margin: 0 20px;   
+    }
+
+    .menu__divider:first-child {
+        margin-left: 20px;
+    }
+    
+    
+
+
+    /* main block */
+    .main {
+        display: flex;
+        flex-direction: column;
+
+        margin: 0;
+        padding: 0;
+        background-color: #F8F8F8;
+
+        font-family: 'TT Lakes',sans-serif;
+        font-size: 16px;
+        line-height: 24px;
+        color: #1B1C21;
+    }
+    
+    .main__pageTitle {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        margin-top: 24px;
+        height: max-content;
+    }
+
+    .main__pageTitle_hilight {
+        width: 4px;
+        height: 40px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        background-color: #41F6D7;
+    }
+
+    .main__pageTitle_text {
+        margin: 0;
+        margin-left: 12px;
+
+        letter-spacing: -0.6px;
+        font-size: 24px;
+        line-height: 40px;
+    }
+
+
+    .main__asideBox {
+        display: flex;
+
+        position: relative;
+
+        margin: 32px 0;
+        padding: 0;
+
+        height: 40px;
+    }
+
+    .main__sideMenu {           /* Убираю бар */
+        overflow-x: auto;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+
+    .sideMenu::-webkit-scrollbar {
+        display: none;
+    }
+
+    .main__sideMenu_button {
+        flex: 0 0 auto;
+        width: 246px;
+        border-color: #F8F8F8;
+        border-style: solid;
+        border-width: 2px;
+        border-radius: 6px;
+        background-color: #F8F8F8;
+
+        font-size: 16px;
+        font-family: 'TT Lakes',sans-serif;
+        letter-spacing: -0.2px;
+        color: #7E7E82;
+    }
+    .main__sideMenu_button:first-child {
+        margin-left: 16px;
+    }
+
+    .main__sideMenu_button:focus {
+        background-color: #FFFFFF;
+        border-color: #B8FFEC;
+    }
+
+    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
+        position: absolute;
+        left: 0;
+        width: 8px;
+        height: 40px;
+        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    }
+
+    .sideMenu__rightEage_fade {
+        position: absolute;
+        right: 0;
+        width: 24px;
+        height: 40px;
+        background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    }
+
+    .main__block {
+        width: 720px;
+        height: 208px;
+        margin-left: 24px;
+        margin-right: 25px;
+        margin-bottom: 40px;
+
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-content: space-between;
+    }
+
+
+    .main__block_text {
+        margin: 0;
+        padding: 0;
+        width: 312px;
+        height: 160px;
+
+        overflow: hidden;
+        font-weight: 300;
+        letter-spacing: 0.2px;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: left;
+    }
+
+    .main__block_par1 {
+        margin: 0;        
+        margin-bottom: 20px;
+    }
+    
+    .main__block_text::after {
+        letter-spacing: 0.2px;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: left;
+        content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера" ;
+    }
+
+    .main__readMore {    
+        display: inline-flex;
+        align-items: center;
+        margin-left: 1px;
+
+        margin-right: auto;
+        width: 132px;
+        height: 24px;
+    }
+    
+    .main__readMore_text {
+        letter-spacing: -0.2px;
+    }
+
+    .main__img {
+        width: 360px;
+        height: 208px;
+        border-radius: 4px;
+    }
+
+}
+
+
+
+
+
+
+
+/************************************************/
+
+/* Правила для 1120px */
+@media (min-width: 1120px) {
     body {
         padding: 0;
         margin: 0;
@@ -440,3 +686,4 @@
     }
 
 }
+
