--- a/rules.css
+++ b/rules.css
@@ -9,20 +9,21 @@
 /* Правила для 320px */
 @media (min-width: 320px) {
     body {
-        padding: 0;
         margin: 0;
     }
-    
-    
 
-    .menu {
+    .nav.header__menu {
         width: 100%;
         height: 87px;
-        padding: 0;
-        margin: 0;
+        align-content: center;
 
         background: #FFFFFF;
         border-bottom: 1px solid #D9FFF5;
+    }
+
+    .nav__list {
+        padding: 0 16px;
+        margin: 0;
 
         list-style-type: none;
         display: flex;
@@ -34,7 +35,6 @@
     .menu__button {
         width: 40px;
         height: 40px;
-        margin-left: 16px;
     }
     
     .menu__link {
@@ -47,26 +47,29 @@
     .menu__divider {
         width: 2px;
         height: 32px;
-        margin-left: auto;   
+        margin: 0 20px;  
     }
 
-    #xs-menu-element-none{
+    .xs-menu-element-none {
         display: none;
     }
     
     .menu__button:last-child {
-        margin-right: 16px;
+        margin-left: 16px;
     }
     
 
 
     /* main block */
+
     .main {
         display: flex;
         flex-direction: column;
+        row-gap: 24px;
 
         margin: 0;
         padding: 0;
+        padding-top: 24px;
         background-color: #F8F8F8;
 
         font-family: 'TT Lakes',sans-serif;
@@ -79,8 +82,7 @@
         display: flex;
         align-items: center;
         flex-direction: row;
-        margin-top: 24px;
-        height: max-content;
+        height: 40px;
     }
 
     .main__pageTitle_hilight {
@@ -101,17 +103,26 @@
     }
 
 
+
+    /* Начало side menu */
+
     .main__asideBox {
         display: flex;
 
         position: relative;
-        margin: 24px 0;
         padding: 0;
 
         height: 40px;
     }
 
-    .main__sideMenu {           /* Убираю бар */
+    .main__sideMenu {   
+        margin: 0; 
+        padding: 0;
+        list-style: none;       /* Убираю бар */
+
+        display: flex;
+        gap: 0;
+
         overflow-x: auto;
         -ms-overflow-style: none;
         scrollbar-width: none;
@@ -123,7 +134,10 @@
 
     .main__sideMenu_button {
         flex: 0 0 auto;
-        width: 246px;
+        height: 40px;
+        margin: 0;
+        padding: 8px 10px;
+        width: max-content;
         border-color: #F8F8F8;
         border-style: solid;
         border-width: 2px;
@@ -135,8 +149,10 @@
         letter-spacing: -0.2px;
         color: #7E7E82;
     }
-    .main__sideMenu_button:first-child {
-        margin-left: 16px;
+
+    .main__sideMenu li:first-child,
+    .main__sideMenu li:last-child {
+        margin: 0 16px;
     }
 
     .main__sideMenu_button:focus {
@@ -161,28 +177,24 @@
     }
 
     .main__block {
+        padding: 0 16px;
+        
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         align-content: space-between;
+        row-gap: 16px;
     }
 
     .main__block_text {
         width: 288px;
         height: 90px;
 
-        margin-top: 0;
-        margin-left: 16px;
-        margin-right: 16px;
-        margin-bottom: 16px;
-        padding: 0;
-
         overflow: hidden;
         font-weight: 300;
         letter-spacing: 0.2px;
         font-size: 14px;
         line-height: 18px;
-        text-align: left;
     }
 
     .main__block_par1 {
@@ -190,16 +202,14 @@
     }
 
     .main__readMore {     
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-left: 16px;
-        margin-bottom: 16px;
         width: 132px;
         height: 24px;
-    }
-    
-    .main__readMore_text {
+
+        display: flex;
+        flex-direction: row;
+        column-gap: 8px;
+        align-items: center;
+
         letter-spacing: -0.2px;
     }
 
@@ -221,7 +231,7 @@
 
 
 
-    .menu {
+    .nav__list {
         width: 100%;
         height: 87px;
         padding: 0;
@@ -288,6 +298,7 @@
 
         margin: 0;
         padding: 0;
+        padding-top: 24px;
         background-color: #F8F8F8;
 
         font-family: 'TT Lakes',sans-serif;
@@ -300,7 +311,6 @@
         display: flex;
         align-items: center;
         flex-direction: row;
-        margin-top: 24px;
         height: max-content;
     }
 
@@ -339,7 +349,7 @@
         scrollbar-width: none;
     }
 
-    .sideMenu::-webkit-scrollbar {
+    .main__sideMenu::-webkit-scrollbar {
         display: none;
     }
 
@@ -453,75 +463,19 @@
 
 /************************************************/
 
+
+
+
 /* Правила для 1120px */
 @media (min-width: 1120px) {
     body {
         padding: 0;
         margin: 0;
-        height: 416px;
     }
 
-
-
-    .menu {
-        width: 100%;
-        height: 87px;
-        padding: 0;
-        margin: 0;
-
-        background: #FFFFFF;
-        border-bottom: 1px solid #D9FFF5;
-
-        list-style-type: none;
-        display: flex;
-        align-items: center ;
-        justify-content: space-between;
-        flex-direction: row;
-
+    .xl-header--hidden {
+        display: none;
     }
-
-    #xs-menu-element-none {
-        display: flex;
-    }
-    
-    .menu__button {
-        width: 40px;
-        height: 40px;
-        margin-left: 16px;
-    }
-
-    .menu__button:first-child {
-        margin-left: 24px;
-        margin-right: 0;
-    }
-
-    .menu__button:nth-last-child(2) {
-        margin-left: 0;
-    }
-
-    .menu__button:last-child {
-        margin-right: 24px;
-    }
-    
-    .menu__link {
-        width: 96px;
-        height: 50px;
-        margin-left: 0;    
-        margin-right: auto;
-    }
-    
-    .menu__divider {
-        width: 2px;
-        height: 32px;
-        margin: 0 20px;   
-    }
-
-    .menu__divider:first-child {
-        margin-left: 20px;
-    }
-    
-    
-
 
     /* main block */
     .main {
@@ -529,7 +483,7 @@
         flex-direction: column;
 
         margin: 0;
-        padding: 0;
+        padding-top: 42px;
         background-color: #F8F8F8;
 
         font-family: 'TT Lakes',sans-serif;
@@ -542,7 +496,6 @@
         display: flex;
         align-items: center;
         flex-direction: row;
-        margin-top: 24px;
         height: max-content;
     }
 
