--- a/rules.css
+++ b/rules.css
@@ -1,4 +1,3 @@
-/*Белый фон для размера меньше 320px */
 @media (max-width: 319px) {
     body {
         display: none;
@@ -11,6 +10,10 @@
     body {
         margin: 0;
     }
+    
+    .nav__list.--hidden {
+        display: none;
+    }
 
     .nav.header__menu {
         width: 100%;
@@ -19,17 +22,19 @@
 
         background: #FFFFFF;
         border-bottom: 1px solid #D9FFF5;
+        
     }
 
     .nav__list {
         padding: 0 16px;
         margin: 0;
+        height: 52px;
 
         list-style-type: none;
         display: flex;
         align-items: center ;
-        justify-content: space-between;
         flex-direction: row;
+        column-gap: 16px;
     }
     
     .menu__button {
@@ -38,25 +43,20 @@
     }
     
     .menu__link {
-        width: 96px;
-        height: 50px;
-        margin-left: 16px;    
-        margin-right: auto;
+        width: 96.55px;
+        height: 52px;
     }
     
     .menu__divider {
         width: 2px;
         height: 32px;
-        margin: 0 20px;  
+        margin-right: 4px;
     }
 
     .xs-menu-element-none {
         display: none;
     }
-    
-    .menu__button:last-child {
-        margin-left: 16px;
-    }
+ 
     
 
 
@@ -76,11 +76,11 @@
         font-size: 16px;
         line-height: 24px;
         color: #1B1C21;
+        height: 100vh;
     }
     
     .main__pageTitle {
         display: flex;
-        align-items: center;
         flex-direction: row;
         height: 40px;
     }
@@ -101,6 +101,15 @@
         font-size: 24px;
         line-height: 40px;
     }
+
+    .main__button_repairIcon {
+        display: none;
+    }
+    
+    .main__button_checkStatusIcon {
+        display: none;
+    }
+
 
 
 
@@ -205,12 +214,14 @@
         width: 132px;
         height: 24px;
 
-        display: flex;
-        flex-direction: row;
+        display: inline-flex;
         column-gap: 8px;
-        align-items: center;
 
         letter-spacing: -0.2px;
+    }
+
+    .main__img {
+        margin-left: -16px;
     }
 
 }
@@ -223,69 +234,21 @@
 
 /* Правила для 768px */
 @media (min-width: 768px) {
-    body {
-        padding: 0;
-        margin: 0;
-
-    }
-
-
 
     .nav__list {
-        width: 100%;
-        height: 87px;
-        padding: 0;
-        margin: 0;
-
-        background: #FFFFFF;
-        border-bottom: 1px solid #D9FFF5;
-
-        list-style-type: none;
-        display: flex;
-        align-items: center ;
-        justify-content: space-between;
-        flex-direction: row;
-
+        padding: 0 24px;
     }
 
-    #xs-menu-element-none {
-        display: flex;
-    }
-    
-    .menu__button {
-        width: 40px;
-        height: 40px;
-        margin-left: 16px;
-    }
-
-    .menu__button:first-child {
-        margin-left: 24px;
-        margin-right: 0;
-    }
-
-    .menu__button:nth-last-child(2) {
-        margin-left: 0;
-    }
-
-    .menu__button:last-child {
-        margin-right: 24px;
-    }
-    
-    .menu__link {
-        width: 96px;
-        height: 50px;
-        margin-left: 0;    
+    .menu__link { 
         margin-right: auto;
     }
     
     .menu__divider {
-        width: 2px;
-        height: 32px;
-        margin: 0 20px;   
+        margin: 0 4px;  
     }
 
-    .menu__divider:first-child {
-        margin-left: 20px;
+    .xs-menu-element-none {
+        display: flex;
     }
     
     
@@ -293,135 +256,34 @@
 
     /* main block */
     .main {
-        display: flex;
-        flex-direction: column;
+        row-gap: 32px;
+    }
 
-        margin: 0;
-        padding: 0;
-        padding-top: 24px;
-        background-color: #F8F8F8;
-
-        font-family: 'TT Lakes',sans-serif;
-        font-size: 16px;
-        line-height: 24px;
-        color: #1B1C21;
+    .main__button_repairIcon {
+        display: none;
     }
     
-    .main__pageTitle {
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        height: max-content;
-    }
-
-    .main__pageTitle_hilight {
-        width: 4px;
-        height: 40px;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-        background-color: #41F6D7;
-    }
-
-    .main__pageTitle_text {
-        margin: 0;
-        margin-left: 12px;
-
-        letter-spacing: -0.6px;
-        font-size: 24px;
-        line-height: 40px;
-    }
-
-
-    .main__asideBox {
-        display: flex;
-
-        position: relative;
-
-        margin: 32px 0;
-        padding: 0;
-
-        height: 40px;
-    }
-
-    .main__sideMenu {           /* Убираю бар */
-        overflow-x: auto;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
-
-    .main__sideMenu::-webkit-scrollbar {
+    .main__button_checkStatusIcon {
         display: none;
     }
 
-    .main__sideMenu_button {
-        flex: 0 0 auto;
-        width: 246px;
-        border-color: #F8F8F8;
-        border-style: solid;
-        border-width: 2px;
-        border-radius: 6px;
-        background-color: #F8F8F8;
-
-        font-size: 16px;
-        font-family: 'TT Lakes',sans-serif;
-        letter-spacing: -0.2px;
-        color: #7E7E82;
-    }
-    .main__sideMenu_button:first-child {
-        margin-left: 16px;
-    }
-
-    .main__sideMenu_button:focus {
-        background-color: #FFFFFF;
-        border-color: #B8FFEC;
-    }
-
-    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
-        position: absolute;
-        left: 0;
-        width: 8px;
-        height: 40px;
-        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
-    }
-
-    .sideMenu__rightEage_fade {
-        position: absolute;
-        right: 0;
-        width: 24px;
-        height: 40px;
-        background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
-    }
-
-    .main__block {
-        width: 720px;
+    .main__block { 
         height: 208px;
-        margin-left: 24px;
-        margin-right: 25px;
-        margin-bottom: 40px;
+        padding-left: 24px;
+        padding-right: 25px;
+        padding-bottom: 40px;
 
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-content: space-between;
+        align-content: normal;
+        gap: 0 48px;
     }
 
 
     .main__block_text {
-        margin: 0;
-        padding: 0;
         width: 312px;
         height: 160px;
-
-        overflow: hidden;
-        font-weight: 300;
-        letter-spacing: 0.2px;
-        font-size: 14px;
-        line-height: 18px;
-        text-align: left;
     }
 
-    .main__block_par1 {
-        margin: 0;        
+    .main__block_par1 {     
         margin-bottom: 20px;
     }
     
@@ -434,23 +296,16 @@
     }
 
     .main__readMore {    
-        display: inline-flex;
-        align-items: center;
-        margin-left: 1px;
-
         margin-right: auto;
-        width: 132px;
-        height: 24px;
+        margin-left: 1px;
     }
     
-    .main__readMore_text {
-        letter-spacing: -0.2px;
-    }
-
     .main__img {
         width: 360px;
         height: 208px;
-        border-radius: 4px;
+        margin: 0;
+
+        border-radius: 5px;
     }
 
 }
@@ -465,178 +320,74 @@
 
 
 
-
 /* Правила для 1120px */
 @media (min-width: 1120px) {
-    body {
-        padding: 0;
-        margin: 0;
-    }
 
     .xl-header--hidden {
         display: none;
     }
 
-    /* main block */
-    .main {
-        display: flex;
-        flex-direction: column;
-
-        margin: 0;
-        padding-top: 42px;
-        background-color: #F8F8F8;
-
-        font-family: 'TT Lakes',sans-serif;
-        font-size: 16px;
-        line-height: 24px;
-        color: #1B1C21;
-    }
-    
-    .main__pageTitle {
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        height: max-content;
-    }
-
-    .main__pageTitle_hilight {
-        width: 4px;
-        height: 40px;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-        background-color: #41F6D7;
-    }
-
     .main__pageTitle_text {
-        margin: 0;
-        margin-left: 12px;
-
-        letter-spacing: -0.6px;
-        font-size: 24px;
-        line-height: 40px;
+        margin-right: auto;
+        margin-left: 30px;
     }
 
 
-    .main__asideBox {
-        display: flex;
-
-        position: relative;
-
-        margin: 32px 0;
-        padding: 0;
-
+    .xl-main__nav .nav__list {
         height: 40px;
     }
 
-    .main__sideMenu {           /* Убираю бар */
-        overflow-x: auto;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
+    .xl-main__nav li:first-child,
+    .xl-main__nav li:last-child {
+        display: inline-flex;
+        height: 40px;
+        align-items: center;
+        column-gap: 8px;
+
     }
 
-    .sideMenu::-webkit-scrollbar {
+    .main__asideBox,
+    .main__sideMenu {
+        width: 1063px;
+        height: 82px;
+    }
+
+    .main__sideMenu {
+        flex-wrap: wrap;
+    }
+
+    .sideMenu__leftEage_fade,
+    .sideMenu__rightEage_fade {
         display: none;
     }
 
-    .main__sideMenu_button {
-        flex: 0 0 auto;
-        width: 246px;
-        border-color: #F8F8F8;
-        border-style: solid;
-        border-width: 2px;
-        border-radius: 6px;
-        background-color: #F8F8F8;
-
-        font-size: 16px;
-        font-family: 'TT Lakes',sans-serif;
-        letter-spacing: -0.2px;
-        color: #7E7E82;
-    }
-    .main__sideMenu_button:first-child {
-        margin-left: 16px;
-    }
-
-    .main__sideMenu_button:focus {
-        background-color: #FFFFFF;
-        border-color: #B8FFEC;
-    }
-
-    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
-        position: absolute;
-        left: 0;
-        width: 8px;
-        height: 40px;
-        background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
-    }
-
-    .sideMenu__rightEage_fade {
-        position: absolute;
-        right: 0;
-        width: 24px;
-        height: 40px;
-        background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
-    }
-
     .main__block {
-        width: 720px;
-        height: 208px;
-        margin-left: 24px;
-        margin-right: 25px;
-        margin-bottom: 40px;
+        height: 363px;
+        padding-left: 34px;
+        padding-right: 28px;
+        padding-bottom: 49px;
 
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-content: space-between;
+        gap: 0 36px;
     }
-
 
     .main__block_text {
-        margin: 0;
-        padding: 0;
-        width: 312px;
+        width: 490px;
         height: 160px;
-
-        overflow: hidden;
-        font-weight: 300;
-        letter-spacing: 0.2px;
-        font-size: 14px;
-        line-height: 18px;
-        text-align: left;
     }
 
-    .main__block_par1 {
-        margin: 0;        
-        margin-bottom: 20px;
-    }
-    
     .main__block_text::after {
         letter-spacing: 0.2px;
         font-size: 14px;
         line-height: 18px;
         text-align: left;
-        content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера" ;
-    }
-
-    .main__readMore {    
-        display: inline-flex;
-        align-items: center;
-        margin-left: 1px;
-
-        margin-right: auto;
-        width: 132px;
-        height: 24px;
-    }
-    
-    .main__readMore_text {
-        letter-spacing: -0.2px;
+        content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким." ;
     }
 
     .main__img {
-        width: 360px;
-        height: 208px;
-        border-radius: 4px;
+        width: 531.35px;
+        height: 307px;
+        
     }
 
-}
 
+}
