--- a/rules.css
+++ b/rules.css
@@ -11,11 +11,11 @@
         margin: 0;
     }
     
-    .nav__list.--hidden {
+    .xs--hidden {
         display: none;
     }
 
-    .nav.header__menu {
+    .b-header__nav {
         width: 100%;
         height: 87px;
         align-content: center;
@@ -25,7 +25,7 @@
         
     }
 
-    .nav__list {
+    .b-nav__list {
         padding: 0 16px;
         margin: 0;
         height: 52px;
@@ -33,36 +33,31 @@
         list-style-type: none;
         display: flex;
         align-items: center ;
-        flex-direction: row;
         column-gap: 16px;
     }
     
-    .menu__button {
+    .b-nav__el {
         width: 40px;
         height: 40px;
     }
     
-    .menu__link {
+    .b-nav__el--logo {
         width: 96.55px;
         height: 52px;
     }
     
-    .menu__divider {
+    .b-nav__el--divider {
         width: 2px;
         height: 32px;
         margin-right: 4px;
     }
 
-    .xs-menu-element-none {
-        display: none;
-    }
- 
-    
+
 
 
     /* main block */
 
-    .main {
+    .b-main {
         display: flex;
         flex-direction: column;
         row-gap: 24px;
@@ -78,14 +73,18 @@
         color: #1B1C21;
         height: 100vh;
     }
+
+    .xl--visible {
+        display: none;
+    }
     
-    .main__pageTitle {
+    .b-pageTitle {
         display: flex;
         flex-direction: row;
         height: 40px;
     }
 
-    .main__pageTitle_hilight {
+    .b-pageTitle__hilight {
         width: 4px;
         height: 40px;
         border-top-right-radius: 4px;
@@ -93,7 +92,7 @@
         background-color: #41F6D7;
     }
 
-    .main__pageTitle_text {
+    .b-pageTitle__text {
         margin: 0;
         margin-left: 12px;
 
@@ -102,20 +101,11 @@
         line-height: 40px;
     }
 
-    .main__button_repairIcon {
-        display: none;
-    }
-    
-    .main__button_checkStatusIcon {
-        display: none;
-    }
-
-
 
 
     /* Начало side menu */
 
-    .main__asideBox {
+    .b-sideBox__nav {
         display: flex;
 
         position: relative;
@@ -124,7 +114,7 @@
         height: 40px;
     }
 
-    .main__sideMenu {   
+    .b-scrollMenu {   
         margin: 0; 
         padding: 0;
         list-style: none;       /* Убираю бар */
@@ -137,11 +127,11 @@
         scrollbar-width: none;
     }
 
-    .sideMenu::-webkit-scrollbar {
+    .b-scrollMenu::-webkit-scrollbar {
         display: none;
     }
 
-    .main__sideMenu_button {
+    .b-scrollMenu__button {
         flex: 0 0 auto;
         height: 40px;
         margin: 0;
@@ -159,33 +149,35 @@
         color: #7E7E82;
     }
 
-    .main__sideMenu li:first-child,
-    .main__sideMenu li:last-child {
+    .b-scrollMenu li:first-child,
+    .b-scrollMenu li:last-child {
         margin: 0 16px;
     }
 
-    .main__sideMenu_button:focus {
+    .b-scrollMenu__button:focus {
         background-color: #FFFFFF;
         border-color: #B8FFEC;
     }
 
-    .sideMenu__leftEage_fade {          /* По ТЗ не нужно но я сделал :)*/
+    .b-scrollMenu__eage {
         position: absolute;
+        height: 40px;
+    }
+
+    .b-scrollMenu__eage--left {       
         left: 0;
         width: 8px;
-        height: 40px;
         background: linear-gradient(to right, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
-    .sideMenu__rightEage_fade {
-        position: absolute;
+    .b-scrollMenu__eage--right {
         right: 0;
         width: 24px;
-        height: 40px;
         background: linear-gradient(to left, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
     }
 
-    .main__block {
+
+    .b-info {
         padding: 0 16px;
         
         display: flex;
@@ -195,7 +187,7 @@
         row-gap: 16px;
     }
 
-    .main__block_text {
+    .b-info__text{
         width: 288px;
         height: 90px;
 
@@ -206,11 +198,11 @@
         line-height: 18px;
     }
 
-    .main__block_par1 {
+    .b-info__text--p1 {
         margin: 0;        
     }
 
-    .main__readMore {     
+    .b-readMore {     
         width: 132px;
         height: 24px;
 
@@ -220,7 +212,7 @@
         letter-spacing: -0.2px;
     }
 
-    .main__img {
+    .b-info__img {
         margin-left: -16px;
     }
 
@@ -235,19 +227,19 @@
 /* Правила для 768px */
 @media (min-width: 768px) {
 
-    .nav__list {
+    .b-nav__list {
         padding: 0 24px;
     }
 
-    .menu__link { 
+    .b-nav__el--logo { 
         margin-right: auto;
     }
     
-    .menu__divider {
+    .b-nav__el--divider {
         margin: 0 4px;  
     }
 
-    .xs-menu-element-none {
+    .xs--hidden {
         display: flex;
     }
     
@@ -255,19 +247,11 @@
 
 
     /* main block */
-    .main {
+    .b-main {
         row-gap: 32px;
     }
 
-    .main__button_repairIcon {
-        display: none;
-    }
-    
-    .main__button_checkStatusIcon {
-        display: none;
-    }
-
-    .main__block { 
+    .b-info { 
         height: 208px;
         padding-left: 24px;
         padding-right: 25px;
@@ -278,16 +262,16 @@
     }
 
 
-    .main__block_text {
+    .b-info__text {
         width: 312px;
         height: 160px;
     }
 
-    .main__block_par1 {     
+    .b-info__text--p1 {     
         margin-bottom: 20px;
     }
     
-    .main__block_text::after {
+    .b-info__text::after {
         letter-spacing: 0.2px;
         font-size: 14px;
         line-height: 18px;
@@ -295,12 +279,12 @@
         content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера" ;
     }
 
-    .main__readMore {    
+    .b-readMore {    
         margin-right: auto;
         margin-left: 1px;
     }
     
-    .main__img {
+    .b-info__img {
         width: 360px;
         height: 208px;
         margin: 0;
@@ -323,22 +307,26 @@
 /* Правила для 1120px */
 @media (min-width: 1120px) {
 
-    .xl-header--hidden {
+    .xl--hidden {
         display: none;
     }
 
-    .main__pageTitle_text {
+    .xl--visible {
+        display: flex;
+    }
+
+    .b-pageTitle__text {
         margin-right: auto;
         margin-left: 30px;
     }
 
 
-    .xl-main__nav .nav__list {
+    .b-main__nav {
         height: 40px;
     }
 
-    .xl-main__nav li:first-child,
-    .xl-main__nav li:last-child {
+    .xl--nav li:first-child,
+    .xl--nav li:last-child {
         display: inline-flex;
         height: 40px;
         align-items: center;
@@ -346,22 +334,22 @@
 
     }
 
-    .main__asideBox,
-    .main__sideMenu {
+    .b-sideBox__nav,
+    .b-scrollMenu {
         width: 1063px;
         height: 82px;
     }
 
-    .main__sideMenu {
+    .b-scrollMenu {
         flex-wrap: wrap;
     }
 
-    .sideMenu__leftEage_fade,
-    .sideMenu__rightEage_fade {
+    .b-scrollMenu__eage,
+    .b-scrollMenu__eage {
         display: none;
     }
 
-    .main__block {
+    .b-info {
         height: 363px;
         padding-left: 34px;
         padding-right: 28px;
@@ -370,12 +358,12 @@
         gap: 0 36px;
     }
 
-    .main__block_text {
+    .b-info__text {
         width: 490px;
         height: 160px;
     }
 
-    .main__block_text::after {
+    .b-info__text::after {
         letter-spacing: 0.2px;
         font-size: 14px;
         line-height: 18px;
@@ -383,7 +371,7 @@
         content: "Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким." ;
     }
 
-    .main__img {
+    .b-info__img {
         width: 531.35px;
         height: 307px;
         
