--- a/rules.css
+++ b/rules.css
@@ -98,17 +98,17 @@
         height: 40px; 
     }
 
-    .pageTitle__hilight {
+    /*.pageTitle__hilight {
         width: 4px;
         height: 40px;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         background-color: #41F6D7;
-    }
+    }*/
 
     .pageTitle__text {
         margin: 0;
-        margin-left: 12px;
+        display: inline-flex;
 
         letter-spacing: -0.6px;
         font-size: 24px;
@@ -116,8 +116,17 @@
     }
 
     .pageTitle__text::before {
-        
+        content: '';
+        display: block;
+        width: 4px;
+        height: 40px;
+        margin-right: 12px;
+
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        background-color: #41F6D7;
     }
+
 
 
 
@@ -280,6 +289,10 @@
         row-gap: 32px;
     }
 
+    .pageTitle__text::before {
+        margin-right: 20px;
+    }
+
     .info { 
         height: 208px;
         padding-left: 24px;
@@ -294,6 +307,7 @@
     .info__text {
         width: 312px;
     }
+    
     
     .info__text::after {
         display: inline-flex;
@@ -343,7 +357,10 @@
 
     .pageTitle__text {
         margin-right: auto;
-        margin-left: 30px;
+    }
+
+    .pageTitle__text::before {
+        margin-right: 30px;
     }
 
 
